added element for about.html

--- a/html/about.html
+++ b/html/about.html
@@ -20,7 +20,25 @@
   </header>
 
   <main>
-    <section></section>
+    <section>
+      <div class="about-img">
+        <img src="../img/sandi.png" alt="">
+      </div>
+
+      <div class="about-text-container">
+        <h1>Arisandi Satria Jeujanan</h1>
+        <h1>Web Development Enthusiasts</h1>
+        <h4>React | React Native | Hapi</h4>
+        <p>I am a student of the computer science program and a passionate web developer. With a keen interest in the
+          field of website development, I constantly strive to enhance my knowledge and skills in this area. I have a
+          strong
+          desire to create innovative and intuitive websites. Being a problem solver, I enjoy taking on challenging
+          projects that
+          require me to think outside the box. I have ability to contribute to any team in need of a skilled and
+          motivated web
+          developer.</p>
+      </div>
+    </section>
   </main>
 </body>
 
