Added content to about.html

--- a/html/about.html
+++ b/html/about.html
@@ -20,15 +20,13 @@
   </header>
 
   <main>
-    <section>
+    <section class="about">
       <div class="about-img">
-        <img src="../img/sandi.png" alt="">
       </div>
 
       <div class="about-text-container">
         <h1>Arisandi Satria Jeujanan</h1>
-        <h1>Web Development Enthusiasts</h1>
-        <h4>React | React Native | Hapi</h4>
+        <h2>Web Development Enthusiasts</h2>
         <p>I am a student of the computer science program and a passionate web developer. With a keen interest in the
           field of website development, I constantly strive to enhance my knowledge and skills in this area. I have a
           strong
