--- a/html/index.html
+++ b/html/index.html
@@ -23,8 +23,8 @@
     <section class="welcome">
       <div class="welcome-container">
         <div class="welcome-text">
-          <h1>Hello! <span>&#128075</span></h1>
-          <h2>I'm Sandi. I'm a website enthusiast.</h2>
+          <h1>Hello! I'm Sandi<span>&#128075</span></h1>
+          <h2> I'm a website and mobile development enthusiast.</h2>
         </div>
         <div class="welcome-img">
           <img src="../img/welcome-img.png" alt="face-vector" />
