--- a/html/portofolio.html
+++ b/html/portofolio.html
@@ -20,7 +20,55 @@
   </header>
 
   <main>
-    <section></section>
+    <section class="portofolio">
+      <div class="portofolio-card">
+        <img src="" alt="">
+        <div class="portofolio-card-title">
+          <h3>Title</h3>
+          <p>React</p>
+        </div>
+      </div>
+
+      <div class="portofolio-card">
+        <img src="" alt="">
+        <div class="portofolio-card-title">
+          <h3>Title</h3>
+          <p>React</p>
+        </div>
+      </div>
+
+      <div class="portofolio-card">
+        <img src="" alt="">
+        <div class="portofolio-card-title">
+          <h3>Title</h3>
+          <p>React</p>
+        </div>
+      </div>
+
+      <div class="portofolio-card">
+        <img src="" alt="">
+        <div class="portofolio-card-title">
+          <h3>Title</h3>
+          <p>React</p>
+        </div>
+      </div>
+
+      <div class="portofolio-card">
+        <img src="" alt="">
+        <div class="portofolio-card-title">
+          <h3>Title</h3>
+          <p>React</p>
+        </div>
+      </div>
+
+      <div class="portofolio-card">
+        <img src="" alt="">
+        <div class="portofolio-card-title">
+          <h3>Title</h3>
+          <p>React</p>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
