--- a/html/blog.html
+++ b/html/blog.html
@@ -20,7 +20,9 @@
   </header>
 
   <main>
-    <section></section>
+    <section class="blog">
+      <h1>Stay Tuned!</h1>
+    </section>
   </main>
 </body>
 
