Added portofolio in portofolio.html

--- a/html/index.html
+++ b/html/index.html
@@ -27,18 +27,18 @@
           <h2> I'm a website and mobile development enthusiast.</h2>
         </div>
         <div class="welcome-img">
-          <img src="../img/welcome-img.png" alt="face-vector" />
+          <img src="../img/icons/welcome-img.png" alt="face-vector" />
         </div>
       </div>
       <div class="js-icon">
-        <img src="../img/javascript.png" alt="javascript-icon">
+        <img src="../img/icons/javascript.png" alt="javascript-icon">
       </div>
       <div class="html-icon">
-        <img src="../img/html-icon.png" alt="html-icon">
+        <img src="../img/icons/html-icon.png" alt="html-icon">
       </div>
     </section>
     <div class="react-icon">
-      <img src="../img/react.png" alt="react-icon">
+      <img src="../img/icons/react.png" alt="react-icon">
     </div>
   </main>
 </body>
