--- a/html/portofolio.html
+++ b/html/portofolio.html
@@ -21,51 +21,34 @@
 
   <main>
     <section class="portofolio">
+
       <div class="portofolio-card">
-        <img src="" alt="">
+        <a href="https://tugas-landing-page-skilvul.netlify.app/" target="_blank">
+          <img src="../img/landing-page.png" alt="">
+        </a>
         <div class="portofolio-card-title">
-          <h3>Title</h3>
-          <p>React</p>
+          <h3>Landing Page Assignment from Skilvul</h3>
+          <p>HTML | CSS</p>
         </div>
       </div>
 
       <div class="portofolio-card">
-        <img src="" alt="">
+        <a href="https://codingno.netlify.app/" target="_blank">
+          <img src="../img/codingno.png" alt="">
+        </a>
         <div class="portofolio-card-title">
-          <h3>Title</h3>
-          <p>React</p>
+          <h3>Codingno</h3>
+          <p>HTML | CSS | JavaScript</p>
         </div>
       </div>
 
       <div class="portofolio-card">
-        <img src="" alt="">
+        <a href="https://gallery-app-cdb6d.web.app/" target="_blank">
+          <img src="../img/gallery-app.png" alt="">
+        </a>
         <div class="portofolio-card-title">
-          <h3>Title</h3>
-          <p>React</p>
-        </div>
-      </div>
-
-      <div class="portofolio-card">
-        <img src="" alt="">
-        <div class="portofolio-card-title">
-          <h3>Title</h3>
-          <p>React</p>
-        </div>
-      </div>
-
-      <div class="portofolio-card">
-        <img src="" alt="">
-        <div class="portofolio-card-title">
-          <h3>Title</h3>
-          <p>React</p>
-        </div>
-      </div>
-
-      <div class="portofolio-card">
-        <img src="" alt="">
-        <div class="portofolio-card-title">
-          <h3>Title</h3>
-          <p>React</p>
+          <h3>Gallery App</h3>
+          <p>React | Firebase</p>
         </div>
       </div>
     </section>
