Added photo for about.html and social media logo in index.html

--- a/html/about.html
+++ b/html/about.html
@@ -22,6 +22,7 @@
   <main>
     <section class="about">
       <div class="about-img">
+        <img src="../img/icons/sandi-rounded.png" alt="">
       </div>
 
       <div class="about-text-container">
