--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,16 @@
         <div class="welcome-text">
           <h1>Hello! I'm Sandi<span>&#128075</span></h1>
           <h2> I'm a website and mobile development enthusiast.</h2>
+          <div class="welcome-socmed">
+            <a href="https://github.com/ArisandiSatria" target="_blank"><img src="../img/icons/github-mark-white.png"
+                alt=""></a>
+            <a href="https://www.linkedin.com/in/arisandisatriajeujanan" target="_blank"><img
+                src="../img/icons/LI-In-Bug.png" alt=""></a>
+            <a href="https://www.instagram.com/arisandi_satria" target="_blank"><img
+                src="../img/icons/Instagram_Glyph_Gradient.png" alt=""></a>
+          </div>
         </div>
+
         <div class="welcome-img">
           <img src="../img/icons/welcome-img.png" alt="face-vector" />
         </div>
