Adjusting folder structure for deploying to netlify

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About</title>
-  <link rel="stylesheet" href="../main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 
 <body>
@@ -22,7 +22,7 @@
   <main>
     <section class="about">
       <div class="about-img">
-        <img src="../img/icons/sandi-rounded.png" alt="">
+        <img src="img/icons/sandi-rounded.png" alt="">
       </div>
 
       <div class="about-text-container">
