--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homepage</title>
-  <link rel="stylesheet" href="../main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 
 <body>
@@ -29,25 +29,25 @@
             <a href="https://github.com/ArisandiSatria" target="_blank"><img src="../img/icons/github-mark-white.png"
                 alt=""></a>
             <a href="https://www.linkedin.com/in/arisandisatriajeujanan" target="_blank"><img
-                src="../img/icons/LI-In-Bug.png" alt=""></a>
+                src="img/icons/LI-In-Bug.png" alt=""></a>
             <a href="https://www.instagram.com/arisandi_satria" target="_blank"><img
-                src="../img/icons/Instagram_Glyph_Gradient.png" alt=""></a>
+                src="img/icons/Instagram_Glyph_Gradient.png" alt=""></a>
           </div>
         </div>
 
         <div class="welcome-img">
-          <img src="../img/icons/welcome-img.png" alt="face-vector" />
+          <img src="img/icons/welcome-img.png" alt="face-vector" />
         </div>
       </div>
       <div class="js-icon">
-        <img src="../img/icons/javascript.png" alt="javascript-icon">
+        <img src="img/icons/javascript.png" alt="javascript-icon">
       </div>
       <div class="html-icon">
-        <img src="../img/icons/html-icon.png" alt="html-icon">
+        <img src="img/icons/html-icon.png" alt="html-icon">
       </div>
     </section>
     <div class="react-icon">
-      <img src="../img/icons/react.png" alt="react-icon">
+      <img src="img/icons/react.png" alt="react-icon">
     </div>
   </main>
 </body>
