--- a/portofolio.html
+++ b/portofolio.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portofolio</title>
-  <link rel="stylesheet" href="../main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 
       <div class="portofolio-card">
         <a href="https://tugas-landing-page-skilvul.netlify.app/" target="_blank">
-          <img src="../img/landing-page.png" alt="">
+          <img src="img/landing-page.png" alt="">
         </a>
         <div class="portofolio-card-title">
           <h3>Landing Page Assignment from Skilvul</h3>
@@ -34,7 +34,7 @@
 
       <div class="portofolio-card">
         <a href="https://codingno.netlify.app/" target="_blank">
-          <img src="../img/codingno.png" alt="">
+          <img src="img/codingno.png" alt="">
         </a>
         <div class="portofolio-card-title">
           <h3>Codingno</h3>
@@ -44,7 +44,7 @@
 
       <div class="portofolio-card">
         <a href="https://gallery-app-cdb6d.web.app/" target="_blank">
-          <img src="../img/gallery-app.png" alt="">
+          <img src="img/gallery-app.png" alt="">
         </a>
         <div class="portofolio-card-title">
           <h3>Gallery App</h3>
