added foodie and healthy care portfolio

--- a/portofolio.html
+++ b/portofolio.html
@@ -43,6 +43,16 @@
       </div>
 
       <div class="portofolio-card">
+        <a href="https://foodie-diet.netlify.app/" target="_blank">
+          <img src="img/foodie.png" alt="">
+        </a>
+        <div class="portofolio-card-title">
+          <h3>Foodie</h3>
+          <p>HTML | CSS | Javascript</p>
+        </div>
+      </div>
+
+      <div class="portofolio-card">
         <a href="https://gallery-app-cdb6d.web.app/" target="_blank">
           <img src="img/gallery-app.png" alt="">
         </a>
@@ -51,6 +61,17 @@
           <p>React | Firebase</p>
         </div>
       </div>
+
+      <div class="portofolio-card">
+        <a href="https://healthy-care.netlify.app/" target="_blank">
+          <img src="img/healthy-care.png" alt="">
+        </a>
+        <div class="portofolio-card-title">
+          <h3>Healthy Care</h3>
+          <p>React | Express | Sequelize</p>
+        </div>
+      </div>
+
     </section>
   </main>
 </body>
